--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=none
 spring.flyway.baseline-on-migrate=true
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 spring.h2.console.enabled=true
